--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,12 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>5.1.3.Final</version>
 		</dependency>
+		
+		<dependency>
+               <groupId>org.hibernate</groupId>
+               <artifactId>hibernate-core</artifactId>
+               <version>5.1.3.Final</version>
+           </dependency>
 		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -214,7 +220,10 @@
 			<artifactId>el-impl</artifactId>
 			<version>2.2</version>
 		</dependency>
+		
 	</dependencies>
+	
+	
 	<build>
 		<plugins>
 			<plugin>
